# neighborly

./: .env.example  README.md  manage.py  pyproject.toml  render.yaml  requirements.txt
comments/: models.py  views.py
comments/migrations/: 0001_initial.py  0002_initial.py
location/: admin.py  form.py  models.py  views.py
location/migrations/: 0001_initial.py
neighborlyApp/: asgi.py  settings.py  urls.py  wsgi.py
neighborlyUsers/: admin.py  apps.py  forms.py  models.py  views.py
neighborlyUsers/migrations/: 0001_initial.py
notifications/: models.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
posts/: apps.py  forms.py  models.py  views.py
posts/migrations/: 0001_initial.py
static/css/: neighborly.css
templates/: 404.html  500.html  generic_form.html  header.html  index.html  login.html  map.html  notifications.html  post.html  profile.html  register.html  zipcode.html
