[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Tommy Bello <tbello4299@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
python-decouple = "^3.5"

requests = "^2.26.0"
uszipcode = "^0.2.6"
psycopg2-binary = "^2.9.1"


Pillow = "^8.3.2"

djangorestframework = "^3.12.4"
djangorestframework-gis = "^0.17"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
